--- a/Lidar0/Lidar0.vcxproj
+++ b/Lidar0/Lidar0.vcxproj
@@ -90,10 +90,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>HRMTimeAPI.lib;MTIDevice.lib;ni4882.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -147,6 +149,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="HRMTimeAPI.h" />
+    <ClInclude Include="HRMTimeErrs.h" />
+    <ClInclude Include="lidar.h" />
+    <ClInclude Include="MTIDataGenerator.h" />
+    <ClInclude Include="MTIDefinitions.h" />
+    <ClInclude Include="MTIDevice.h" />
+    <ClInclude Include="MTISerial.h" />
+    <ClInclude Include="ni4882.h" />
+    <ClInclude Include="QuickUSB.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
